--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ drf-spectacular = "^0.27.0"
 django-cors-headers = "^4.3.1"
 djoser = "^2.2.2"
 gunicorn = "^21.2.0"
+django-filter = "^23.5"
 
 
 [tool.poetry.group.dev.dependencies]
